# Home-Server

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake  exit.txt  main  main.cpp  makefile  script.bash  script.sh  server.out  test.cpp  test.h  todo.md
Debug/: CMakeCache.txt  Makefile  cmake_install.cmake  server
Illustrations/: .$Diagram.drawio.bkp  Diagram.drawio  links.txt  message exemple.txt  tree.txt
data/: settings.txt
old.src/: log.hpp  test.cpp  test.hpp
old.src/server/: parser.cpp  router.hpp  server.hpp  tls.cpp
server/: index.html  login.html
src/: config.cpp  config.hpp  log.hpp  macro.hpp  main  main.cpp  main.txt  test.cpp  test.hpp
src/client/: client.cpp  client.hpp  ssl-client.cpp
src/config/: config.cpp  config.hpp
src/file/: loading.cpp  loading.hpp
src/option/: option.cpp  option.hpp
src/options/: options.cpp  options.hpp
src/params/: params.cpp  params.hpp
src/parser/: parser.cpp  parser.h  parser.hpp
src/parsing/: option.cpp  parser.cpp  parsing.hpp
src/request/: request.cpp  request.h
src/server/: client.cpp  client.hpp  clients.cpp  parser.cpp  parser.hpp  reqres.cpp  reqres.hpp  router.cpp  router.hpp  server.cpp  server.hpp  stream.cpp  tcp.cpp  tls.cpp
src/settings/: settings.cpp  settings.hpp
src/tcp-server/: tcp-server.cpp  tcp-server.h  tcp-server.hpp
src/test/: option.cpp  request.cpp  router.cpp  stream.cpp  test.cpp  test.hpp
src/tls-server/: tls-server.cpp  tls-server.hpp
test/: server.out
test/css/: style.css
test/html/: index.html  (+1 more)
tmp/: server.out
(+13 files in other folders)
